UV Editor, Pivot "Individual Origins" doesn't work as expected #47959

Closed
opened 2016-03-27 04:16:57 +02:00 by martin me · 31 comments

System Information
Win7 64bit, Geforce 960

Blender Version
2.76

Short description of error
When I switch the pivot in UV Editor to "Individual Origins" UV Editing doesn't work any other then with pivot set to "Median".
To make it work as expected, I needed to "Edge Split" the entire mesh in 3D View temporarily.
Then I was able to scale UV faces around their individual centers, for example, like I expected it to work anyway, without having to realy splitting the entire mesh in 3D View Window first.

Strange somehow !
Or do I miss the meaning of this settings ?

Exact steps for others to reproduce the error
Add a plane and subdivide it in Edit Mode several times and UV unwrap it.
Go to UV Editor and switch the pivot to "Individual Origins".
It won't have any effect until you "Edge Split" the entire mesh into separate faces, in 3D View Window.

**System Information** Win7 64bit, Geforce 960 **Blender Version** 2.76 **Short description of error** When I switch the pivot in UV Editor to "Individual Origins" UV Editing doesn't work any other then with pivot set to "Median". To make it work as expected, I needed to "Edge Split" the entire mesh in 3D View temporarily. Then I was able to scale UV faces around their individual centers, for example, like I expected it to work anyway, without having to realy splitting the entire mesh in 3D View Window first. Strange somehow ! Or do I miss the meaning of this settings ? **Exact steps for others to reproduce the error** Add a plane and subdivide it in Edit Mode several times and UV unwrap it. Go to UV Editor and switch the pivot to "Individual Origins". It won't have any effect until you "Edge Split" the entire mesh into separate faces, in 3D View Window.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @martinme

Added subscriber: @martinme
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

looks indeed like code here [INDIVIDUAL_ORIGINS] was added specifically for UV islands (see 0d3555).
While adding support for individual faces would be possible, I'm not sure how useful this would be? Could you explain a special usecase for this?

looks indeed like code here [INDIVIDUAL_ORIGINS] was added specifically for UV **islands** (see 0d3555). While adding support for individual faces would be possible, I'm not sure how useful this would be? Could you explain a special usecase for this?
Member

D1877 would at least clarify this a bit?

[D1877](https://archive.blender.org/developer/D1877) would at least clarify this a bit?

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-03-27 17:00:06 +02:00

Yep, no bug here, it behaves the same as in mesh edit mode (if you select four connected faces, their 'individual' origin is shared median point of those four, same goes for UVs).

Note however that with UVs, you can choose to not select all UVs sharing same vertex/coordinate, which means you do can scale individual faces without deforming neighbor ones, at the cost of breaking UV-connection between them.

@lichtwerk indeed tip is bad here, will commit fix inspired from your patch, thx. ;)

Yep, no bug here, it behaves the same as in mesh edit mode (if you select four connected faces, their 'individual' origin is shared median point of those four, same goes for UVs). Note however that with UVs, you can choose to not select all UVs sharing same vertex/coordinate, which means you do can scale individual faces without deforming neighbor ones, at the cost of breaking UV-connection between them. @lichtwerk indeed tip is bad here, will commit fix inspired from your patch, thx. ;)

This issue was referenced by 211b539644

This issue was referenced by 211b539644a776fafed5daaefd66cbcbf0a4c2ac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

@mont29: note though that if you "choose not to select all UVs sharing the same vertex" [aka set Sticky Selection Mode to 'disabled'] and use individual origins it will still use the median point as center... this is just not implemented afaiks (code finds island centers). So the report has a point in that regard, I think (just not sure how useful it would really be)

@mont29: note though that if you "choose not to select all UVs sharing the same vertex" [aka set Sticky Selection Mode to 'disabled'] and use individual origins it will still use the median point as center... this is just not implemented afaiks (code finds island centers). So the report has a point in that regard, I think (just not sure how useful it would really be)
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

I don't see any differnt behaviour in editing the UV, no matter if pivot set to "Median" or "Individual Origins".
Even doesn't matter what sticky mode is selected or whatever else I do.
Different from mesh editing in 3D View, in UV, pivot on "Individual" Origins" behaves the same like pivot on "Median".

If this is how it should work you can even delete UV pivot mode "Individual Origins" again, because then it got no meaningful function at all, as far as I can tell !

Individual_Origins_UV.png

I don't see any differnt behaviour in editing the UV, no matter if pivot set to "Median" or "Individual Origins". Even doesn't matter what sticky mode is selected or whatever else I do. Different from mesh editing in 3D View, in UV, pivot on "Individual" Origins" behaves the same like pivot on "Median". If this is how it should work you can even delete UV pivot mode "Individual Origins" again, because then it got no meaningful function at all, as far as I can tell ! ![Individual_Origins_UV.png](https://archive.blender.org/developer/F298548/Individual_Origins_UV.png)
Member

@martinme: individual origins works for separat UV islands (or individual faces in separat UV islands), it does make a difference there, so no point in removing the option...
But it doesnt work for faces in the same UV island, this might be unexpected, it could be implemented (maybe in the case that not all faces in an island are selected), but it is propably not considered a bug. Let others decide here...
Could you provid a practical usecase where this would really help? I could have a look then if desired...

@martinme: individual origins works for separat UV islands (or individual faces in separat UV islands), it does make a difference there, so no point in removing the option... But it doesnt work for faces in the same UV island, this might be unexpected, it could be implemented (maybe in the case that not all faces in an island are selected), but it is propably not considered a bug. Let others decide here... Could you provid a practical usecase where this would really help? I could have a look then if desired...
Author

I got it, it works on UV ilands.
Sorry for me being this stubborn.

I got it, it works on UV ilands. Sorry for me being this stubborn.
Author

For my individual problem I did found a solution already, as I mentioned in my initial posting.
I wanted to scale down all UV faces to zero around their individual centres, for some kind of uncommon usage.
This also works with "Individual Origins" on in UV Editor, but I needed to also Edge Split the entire mesh in 3D View to make it work in UV.

For my individual problem I did found a solution already, as I mentioned in my initial posting. I wanted to scale down all UV faces to zero around their individual centres, for some kind of uncommon usage. This also works with "Individual Origins" on in UV Editor, but I needed to also Edge Split the entire mesh in 3D View to make it work in UV.
Member

@martinme: you dont need to "edge split the entire mesh in 3D View" to create individual UV islands. You could e.g. grab a face in the UV editor (with Sticky Selection Mode disabled) and e.g move it off slightly (more than 0.0001) and voila: you have a new island... multiple ways to achieve what you want without leaving the UV editor...

@martinme: you dont need to "edge split the entire mesh in 3D View" to create individual UV islands. You could e.g. grab a face in the UV editor (with Sticky Selection Mode disabled) and e.g move it off slightly (more than 0.0001) and voila: you have a new island... multiple ways to achieve what you want without leaving the UV editor...

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Please do not reopen bugs yourself. And no bug here, feature requests etc. can go to ML.

Please do not reopen bugs yourself. And no bug here, feature requests etc. can go to ML.
Author

Again I come to this problem.
Now I recogniced that, e.g. scaling around Individual Centres in UV Editor fails, even for UV Ilands, if the Mesh was unwrapped with "Project from View".
On the same Mesh, same UV settings, but unwrapped with "U -> Unwrap", it works fine.

And no, I don't would consider this a feature request ! I consider this a case of logical inconsistency !

Again I come to this problem. Now I recogniced that, e.g. scaling around Individual Centres in UV Editor fails, even for UV Ilands, if the Mesh was unwrapped with "Project from View". On the same Mesh, same UV settings, but unwrapped with "U -> Unwrap", it works fine. And no, I don't would consider this a feature request ! I consider this a case of logical inconsistency !
Member

@martinme: no reason to use exclamation marks (implies shouting...) we were listening, werent we? Reporting bugs is welcome btw. so thanx for this.
Anyways: I cannot reproduce your issue, I have no problem scaling individual islands produced by "Project From View". Are you sure you still have multiple UV Islands after projecting?
So: please provide a simple .blend then so we can reproduce the issue...

@martinme: no reason to use exclamation marks (implies shouting...) we were listening, werent we? Reporting bugs is welcome btw. so thanx for this. Anyways: I cannot reproduce your issue, I have no problem scaling individual islands produced by "Project From View". Are you sure you still have multiple UV Islands after projecting? So: please provide a simple .blend then so we can reproduce the issue...

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie

In #47959#366635, @lichtwerk wrote:
looks indeed like code here [INDIVIDUAL_ORIGINS] was added specifically for UV islands (see 0d3555).
While adding support for individual faces would be possible, I'm not sure how useful this would be? Could you explain a special usecase for this?

image.png
I don't know if there is a Mandela effect, I remember it was possible to scale individual faces before. For this I tested 3.4, 3.3, 3.2, 2.9, 2.79. All versions do not have this feature. . . But before I offte used it to achieve random colors like this.

It is hoped that the independent pivot point can be based on the selection mode of the current UV.

> In #47959#366635, @lichtwerk wrote: > looks indeed like code here [INDIVIDUAL_ORIGINS] was added specifically for UV **islands** (see 0d3555). > While adding support for individual faces would be possible, I'm not sure how useful this would be? Could you explain a special usecase for this? ![image.png](https://archive.blender.org/developer/F13933629/image.png) I don't know if there is a Mandela effect, I remember it was possible to scale individual faces before. For this I tested 3.4, 3.3, 3.2, 2.9, 2.79. All versions do not have this feature. . . But before I offte used it to achieve random colors like this. It is hoped that the independent pivot point can be based on the selection mode of the current UV.

image.png
By the way, how is this UV achieved now.
Mark the seam edge and unwarp, which can be independently scaled by margin. But the screenshot shows that their order is not right. So there is a need for a function that can scale faces independently. This is useful for assigning values to faces by UV map.

![image.png](https://archive.blender.org/developer/F13934142/image.png) By the way, how is this UV achieved now. Mark the seam edge and unwarp, which can be independently scaled by margin. But the screenshot shows that their order is not right. So there is a need for a function that can scale faces independently. This is useful for assigning values to faces by UV map.
Member

@Leroy-Xie: could you just open e new report for this? Not quite sure what this is about now:

  • you found a solution yourself to circumvent the "UV islands" issue [in that you mark seams first]
  • not sure what you mean by "But the screenshot shows that their order is not right"
@Leroy-Xie: could you just open e new report for this? Not quite sure what this is about now: - you found a solution yourself to circumvent the "UV islands" issue [in that you mark seams first] - not sure what you mean by "But the screenshot shows that their order is not right"

@lichtwerk
As everyone mentioned, this is not a bug, more a feature request. Because independent scaling is for islands.

Fortunately, I found a temporary alternative.

Method 1: Mark the stitching edge, Unwarp, because unwarp and Project from view (boundbox) are different, the order of the faces will be inconsistent with the model.

Method 2: Alt+M, Split Faces by Edges, Project from view(boundbox), than scale uv by individual. The obtained face arrangement is consistent with the model, as expected, and the model needs to be merged back after the defect is divided.

The comparison video is as follows
20221117_16.29_766.mp4

@lichtwerk As everyone mentioned, this is not a bug, more a feature request. Because independent scaling is for islands. Fortunately, I found a temporary alternative. Method 1: Mark the stitching edge, Unwarp, because unwarp and Project from view (boundbox) are different, the order of the faces will be inconsistent with the model. Method 2: Alt+M, Split Faces by Edges, Project from view(boundbox), than scale uv by individual. The obtained face arrangement is consistent with the model, as expected, and the model needs to be merged back after the defect is divided. The comparison video is as follows [20221117_16.29_766.mp4](https://archive.blender.org/developer/F13934922/20221117_16.29_766.mp4)
Member

@Leroy-Xie : in 3.4 it works without unwrapping or splitting edges since caf6225a3d

UV: support uv seams when computing uv islands

An edge can be marked BM_ELEM_SEAM, which means the UV co-ordinates
on either side of the edge are actually independent, even if they
happen to currently have the same value.

This commit optionally add support for UV Seams when computing islands.

Affects UV sculpt tools, individual origins, UV stitch and changing
UV selection modes etc.

Required for upcoming packing refactor which requires seam support
when computing islands.

@Leroy-Xie : in 3.4 it works without unwrapping or splitting edges since caf6225a3d > UV: support uv seams when computing uv islands > > An edge can be marked BM_ELEM_SEAM, which means the UV co-ordinates > on either side of the edge are actually independent, even if they > happen to currently have the same value. > > This commit optionally add support for UV Seams when computing islands. > > Affects UV sculpt tools, individual origins, UV stitch and changing > UV selection modes etc. > > Required for upcoming packing refactor which requires seam support > when computing islands.

@lichtwerk Wow, that looks good, thanks for the tip!

@lichtwerk Wow, that looks good, thanks for the tip!

If works with disable Sticky Selection Mode will be more nice(Disable works in Mandela memory:D!!!!! ).
image.png

If works with disable Sticky Selection Mode will be more nice(Disable works in Mandela memory:D!!!!! ). ![image.png](https://archive.blender.org/developer/F13936716/image.png)
Member

In #47959#1447527, @Leroy-Xie wrote:
If works with disable Sticky Selection Mode will be more nice(Disable works in Mandela memory:D!!!!! ).
image.png

works on my side, it doesnt for you?

> In #47959#1447527, @Leroy-Xie wrote: > If works with disable Sticky Selection Mode will be more nice(Disable works in Mandela memory:D!!!!! ). > ![image.png](https://archive.blender.org/developer/F13936716/image.png) works on my side, it doesnt for you?

Worked with mark seam, I am meaning not need mark seam, just disable stick will more nice.

Worked with mark seam, I am meaning not need mark seam, just disable stick will more nice.
Member

Feel free to open a new report for this

Feel free to open a new report for this
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47959
No description provided.