Fix T47959: make tip for 'individual origins' pivot point in UV editor more accurate.

Based on D1877 from Philipp Oeser (lichtwerk), thanks.